Ajuste build android

--- a/.gitignore
+++ b/.gitignore
@@ -11,10 +11,14 @@
 /[Ll]ogs/
 /[Mm]emoryCaptures/
 /[Uu]serSettings/
-/[Aa]ssets/Plugins/
+/[Aa]ssets/Plugins/iOS/WikitudeSDK.framework
+/apk
+*.aar
+*.a
+*.dll
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
-!/[Aa]ssets/**/*.meta
+/[Aa]ssets/**/*.meta
 
 # Uncomment this line if you wish to ignore the asset store tools plugin
 # /[Aa]ssets/AssetStoreTools*
@@ -60,4 +64,3 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
-
